fix: update deprecated and changed API usages